--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -2,7 +2,8 @@
 @namespace epub "http://www.idpf.org/2007/ops";
 
 #chapter-1-1 blockquote p,
-#chapter-1-3 blockquote p{
+#chapter-1-3 blockquote p,
+#chapter-6-7 blockquote:first-of-type p{
 	text-align: center;
 	text-indent: 0;
 	text-transform: uppercase;
@@ -10,7 +11,6 @@
 
 #chapter-2-4 blockquote,
 #chapter-4-5 blockquote,
-#chapter-6-7 blockquote:first-of-type,
 #chapter-3-5 header{
 	font-variant: small-caps;
 	text-align: center;
